--- a/src/app/shared/ad-carousel/ad-carousel.component.scss
+++ b/src/app/shared/ad-carousel/ad-carousel.component.scss
@@ -1,3 +1,23 @@
 .ad-carousel-container {
+  margin-top: 20px;
+  .text-block {
+    position: relative;
+    display: inline-block;
+    margin: 0 auto;
+    padding: 0 20px;
+    top: 20px;
+    text-align: center;
+  }
+  .img-block {
+    padding: 0 20px;
+    .img-container img {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: auto;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+  }
 
 }
