--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -11,8 +11,8 @@
       <div class="logo-col" nz-col nzXs="24" nzSm="24" nzMd="8" nzLg="8" nzXl="5" [nzXXl]="4">
         <a href="/" class="nav-logo"></a>
       </div>
-      <div class="menu-col" nz-col nzXs="0" nzSm="0" nzMd="16" nzLg="16" nzXl="19" [nzXXl]="20">
-        <ul nz-menu [nzMode]="'horizontal'">
+      <div  nz-col nzXs="0" nzSm="0" nzMd="16" nzLg="16" nzXl="19" [nzXXl]="20">
+        <ul class="menu-col" nz-menu [nzMode]="'horizontal'">
           <li nz-menu-item [nzSelected]="true"> Home</li>
           <li nz-menu-item> Telephone</li>
         </ul>
