--- a/src/app/shared/ad-carousel/ad-carousel.component.html
+++ b/src/app/shared/ad-carousel/ad-carousel.component.html
@@ -4,7 +4,7 @@
       <div nz-carousel-content nz-row *ngFor="let news of adNews">
         <div nz-col nzXs="24" nzSm="24" nzMd="10" nzLg="12" nzXl="12">
           <div class="text-block">
-            <h2>{{news.title}}</h2>
+            <h1 class="newsTitle">{{news.title}}</h1>
             <span>{{news.subTitle}}</span>
           </div>
         </div>
