--- a/src/app/shared/api/api/api.component.html
+++ b/src/app/shared/api/api/api.component.html
@@ -1,3 +1,2 @@
-<p>
-  api works!
-</p>
+<a href={{api.url}} class="api"><img class="iconImage" src={{api.icon}}>
+  <h3 class="title">{{api.name}}</h3></a>
