--- a/src/app/shared/ad-carousel/ad-carousel.component.scss
+++ b/src/app/shared/ad-carousel/ad-carousel.component.scss
@@ -1,3 +1,4 @@
+@import "../../sharedValue";
 .ad-carousel-container {
   margin-top: 20px;
   .text-block {
@@ -10,6 +11,12 @@
   }
   .img-block {
     padding: 0 20px;
+    @media screen and (max-width: $screen-lg-min){
+      padding: 0 10px;
+    }
+    @media screen and (max-width: $screen-sm-min){
+      padding: 0 2px;
+    }
     .img-container img {
       position: relative;
       display: block;
@@ -17,6 +24,15 @@
       height: auto;
       max-width: 600px;
       margin: 0 auto;
+    }
+  }
+  .newsTitle {
+    font-size: 40px;
+    @media screen and (max-width: $screen-lg-min){
+      font-size: 30px;
+    }
+    @media screen and (max-width: $screen-sm-min){
+      font-size: 14px;
     }
   }
 
