--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -14,7 +14,7 @@
       <div  nz-col nzXs="0" nzSm="0" nzMd="16" nzLg="16" nzXl="19" [nzXXl]="20">
         <ul class="menu-col" nz-menu [nzMode]="'horizontal'">
           <li nz-menu-item [nzSelected]="true"> Home</li>
-          <li nz-menu-item> Telephone</li>
+          <li nz-menu-item><a href="/telephone">Telephone</a></li>
         </ul>
       </div>
     </div>
