--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -13,8 +13,8 @@
       </div>
       <div  nz-col nzXs="0" nzSm="0" nzMd="16" nzLg="16" nzXl="19" [nzXXl]="20">
         <ul class="menu-col" nz-menu [nzMode]="'horizontal'">
-          <li nz-menu-item [nzSelected]="true"> Home</li>
-          <li nz-menu-item><a href="/telephone">Telephone</a></li>
+          <li nz-menu-item > <a routerLink="/">Home</a></li>
+          <li nz-menu-item><a routerLink="/telephone">Telephone</a></li>
         </ul>
       </div>
     </div>
